<resources>
    <string name="app_name">My App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Inżynieria Biomedyczna :)</string>
    <string name="second_fragment_label">Inżynieria Biomedyczna :)</string>
    <string name="login_button_text">Zaloguj</string>
    <string name="previous">Powrót</string>

    <string name="hello_first_fragment">Witaj w Pharmashop</string>
    <string name="Username">Podaj login</string>
    <string name="Password">Podaj hasło</string>
    <string name="Password2">Podaj hasło jeszcze raz</string>
    <string name="Buy">Zakupy</string>
    <string name="Schedule">Terminarz</string>
    <string name="Lokale">Spis lokalizacji</string>
    <string name="Credits">Wiadomości o autorach</string>
    <string name="Delete">Usun konto</string>
    <string name="LogOut">Wyloguj</string>
    <string name="AddProd">Dodaj Produkt</string>
    <string name="AddProdToBasket">Dodaj Produkt do Koszyka</string>
    <string name="ArrivalInfo">Powiadom o możliwości odbioru</string>
    <string name="Storage">Wyświetl asortyment</string>
    <string name="Update">Zaktualizuj produkt</string>
    <string name="CheckBasket">Pokaż koszyk</string>
    <string name="AddLocal">Dodaj lokalizację</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register_button_text">Rejestruj</string>
    <string name="Email">Podaj Email</string>
    <string name="MedName">Podaj nazwę leku</string>
    <string name="order">Zamów</string>
    <string name="karta">karta</string>
    <string name="przelew">przelew</string>
    <string name="adres">na adres</string>
    <string name="podaj_adres">podaj swoje miasto</string>
    <string name="podaj_ulice">podaj swoją ulicę</string>
    <string name="podaj_numer">podaj numer domu</string>
    <string name="podaj_name">podaj imię i Nazwisko</string>
    <string name="sklep">do sklepu</string>
    <string name="metoda_platnosci">Metoda płatności</string>
    <string name="dostawa">Sposób dostawy</string>
    <string name="usun">Usuń produkt</string>
    <string name="kup">Kup koszyk</string>
    <string name="MedPrice">Podaj cenę leku</string>
    <string name="MedDescript">Podaj opis leku</string>
    <string name="MedIngredients">Podaj skład leku</string>
    <string name="MedTags">Podaj tagi leku</string>
    <string name="MedPresc">Czy lek wymaga recepty?</string>
    <string name="PharName">Podaj nazwę lokalu</string>
    <string name="PharAdres">Podaj adres lokalu</string>
    <string name="PharTime">Podaj czas dostawy</string>
    <string name="MedId">Podaj id leku</string>
    <string name="MedNameNew">Podaj nową nazwę leku</string>
    <string name="MedPriceNew">Podaj nową cenę leku</string>
    <string name="MedDescNew">Podaj nowy opis leku</string>
    <string name="MedDelete">Usuń podany lek</string>
    <string name="Notif">Powiadom</string>
    <string name="DarkMode">Włącz tryb ciemny</string>
    <string name="LightMode">Włącz tryb jasny</string>
    <string name="OrderId">Podaj nr id zamówienia</string>
    <string name="AdminPass">Admin pass</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="Author1">Monika Najdek</string>
    <string name="Author2">Tymoteusz Całka</string>


    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="next">Next</string>

    <string name="err_msg_enter_email">Please enter your email</string>
    <string name="err_msg_enter_login">Please enter your login</string>
    <string name="err_msg_enter_name">Please enter your name</string>
    <string name="err_msg_enter_password">Please enter your password</string>
    <string name="err_msg_enter_reppassword">Please confirm your password</string>
    <string name="err_msg_password_mismatch">Passwords mismatch</string>
</resources>