<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout12"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background2"
    tools:context=".TransferAddressFragment">

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="223dp"
        android:layout_height="60dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/podaj_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="223dp"
        android:layout_height="60dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="208dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/podaj_adres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="223dp"
        android:layout_height="60dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="316dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/podaj_ulice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="223dp"
        android:layout_height="60dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="416dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/podaj_numer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_blue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="168dp"
        android:layout_marginBottom="232dp"
        android:text="@string/order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>