<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background2"
    tools:context=".FragmentAddLocal">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="Dodaj lokal"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <EditText
        android:id="@+id/TextName"
        android:layout_width="213dp"
        android:layout_height="67dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/PharName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first" />

    <EditText
        android:id="@+id/textadress"
        android:layout_width="213dp"
        android:layout_height="67dp"
        android:layout_marginTop="124dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/PharAdres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first" />

    <EditText
        android:id="@+id/editTextTextPersonName12"
        android:layout_width="213dp"
        android:layout_height="67dp"
        android:layout_marginTop="216dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/PharTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonGoBack5"
        android:layout_width="135dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_blue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName12" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddLocal2"
        android:layout_width="135dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_blue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/AddLocal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName12" />
</androidx.constraintlayout.widget.ConstraintLayout>